[package]
name = "string_finder"
version = "0.1.0"
authors = ["Damian J Pound <damian@thebestisp.com>"]
edition = "2018"

[dependencies]
rayon="*"
arrayvec="*"
strength_reduce="*"
either="*"

[profile.release]
debug = true

#Redundant for building, but necessary for Rust Language Server (or maybe just VS Code?).
[[bin]]
name='iteration_division'
path='src/bin/iteration_division.rs'

[[bin]]
name='vector_increment'
path='src/bin/vector_increment.rs'

[[bin]]
name='for_flat_map'
path='src/bin/for_flat_map.rs'
